socksproxy (0.1) lucid precise trusty; urgency=low

  * First release

 -- Philipp Heckel <philipp.heckel@gmail.com>  Fri, 30 Jan 2015 12:12:12 +0100